# university-projects

./: .gitignore  README.md
Android_applications/: sqlite.txt
Android_applications/Calculator/: README.md
Assembler/: CMakeLists.txt.user.0000000  main.py  mul  mul_Yakovleva.asm  run_tests.sh  sub  sub_Yakovleva.asm  test1.gold  test1.txt
C++/gcc.Sorokin/: move.cpp  (+2 more)
ComputationalGeometry/first2/: CMakeLists.txt  main.cpp
ConcurrentDistributedComputing/: DKVS.rar  Вопросы к экзамену 2016 - распределенные системы.doc
Contests/: Main.java  main.cpp  main.pas  sum.cpp
DifferentialEquations/: Doc1.docx  main.cpp  main2.cpp  output1.txt  output12.txt  output2.txt  output22.txt
Haskell/: Eval.hs  MainLection00.hs  MainLection01.hs  MainLection02.hs  MainLection03.hs  MainLection04.hs  lesson10.04.hs
JavaScript/: RunJS.html  RunJS.java  TestJS.java  eval.js  script.js
Labs/segal_matrix/computational-methods-hw2/: CMakeLists.txt  generate_bad_matrix.cpp  relax.in  relaxation_method.cpp  relaxation_method2.cpp  tests.in
Labs/segal_matrix/computational-methods-hw2/headers/: gauss_solver.h  gradient_descent_solver.h  iterative_solver.h  matrix.h  system_solver.h
Labs/segal_matrix/computational-methods-hw2/src/: main.cpp
MathLogic/: counterexample.in
Standings_chocolate/: current.txt  result.txt  result_old.txt  standing.txt  sum.txt  sum2.txt
TypeTheory_2015/: .project
computational-methods-cw1/: AlGaN_HVPE.rar
lessons_56_2015/: 2011-2012 без ответов.doc  2011-2012 ответы.doc  2012-2013 без ответов.docx  2012-2013 ответы.docx  2012-2013_7_класс.docx  2013-2014 без ответов.docx  2013-2014 ответы.docx  2013-2014_7_класс.docx  2014-2015 ответы.docx  Prilozhenie 1.doc  Prilozhenie 2.doc  Program stena2.pas  program.docx  program2.docx  region2015_1_1.cpp  ru-olymp-spb-municipal-2015-archive.rar  tmp.cpp  triangle.pas  город2015.docx
smth/: F.cpp  FF.cpp  J.cpp  ProgramRedactor2.pas  dfs.py  happy.cpp  input.txt  knopka.pas  main.cpp  mda.cpp  output.txt  square.pas  temp.cpp
(+1948 files in other folders)
